--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -1,19 +1,18 @@
-set -g default-terminal "screen-256color"
-
-# Map Default Prefix
-set -g prefix C-a
-unbind C-b
-bind-key C-a send-prefix
-
-# Split Windows
-unbind %
-bind | split-window -h
-unbind '"'
-bind - split-window -v
-
 # Reload Config
 unbind r
 bind r source-file ~/.config/tmux/tmux.conf
+
+# Map Default Prefix
+set -g prefix C-a
+
+set -g mouse on
+
+bind-key h select-pane -L
+bind-key j select-pane -D
+bind-key k select-pane -U
+bind-key l select-pane -R
+
+set-option -g status-position top
 
 # Resize Panes
 bind -r j resize-pane -D 5
@@ -24,14 +23,57 @@ bind -r m resize-pane -Z
 bind C-p previous-window
 bind C-n next-window
 
-# Enable Mouse
-set -g mouse on 
-
 # Terminal Scrollback
-set -g history-limit 50000
+set -g history-limit 50001
 
-set -g @plugin 'tmux-plugins/tmp'
+# Enable VIM motions
+# set-window-option -g mode-keys vi
+# bind-key -T copy-mode-vi 'v' send -X begin-selection
+# bind-key -T copy-mode-vi 'y' send -X copy-selection
 
+set-option -g status-position top
+
+# Enable Mouse Dragging
+unbind -T copy-mode-vi MouseDragEnd1Pane
+
+# neovim checkhealth recommendations
+set-option -sg escape-time 10
+set-option -g focus-events on
+
+# List of plugins
+set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'christoomey/vim-tmux-navigator'
+set -g @plugin 'catppuccin/tmux'
 
-run '~/.config/tmux/plugins/tpm/tpm'
+set -g @plugin 'tmux-plugins/tmux-resurrect' # tmux sessions persist after resart
+set -g @plugin 'tmux-plugins/tmux-continuum' # autosaves sessions each 15 minutes
+
+set -g @catppuccin_window_left_separator ""
+set -g @catppuccin_window_right_separator " "
+set -g @catppuccin_window_middle_separator " █"
+set -g @catppuccin_window_number_position "right"
+
+set -g @catppuccin_window_default_fill "number"
+set -g @catppuccin_window_default_text "#W"
+
+set -g @catppuccin_window_current_fill "number"
+set -g @catppuccin_window_current_text "#W"
+
+set -g @catppuccin_status_modules_right "directory user host session"
+set -g @catppuccin_status_left_separator  " "
+set -g @catppuccin_status_right_separator ""
+set -g @catppuccin_status_fill "icon"
+set -g @catppuccin_status_connect_separator "no"
+
+set -g @catppuccin_directory_text "#{pane_current_path}"
+
+# Auto-Saving
+set -g @resurrect-capture-pane-contents 'on'
+set -g @continuum-restore 'on'
+set -g @continuum-save-interval '1'
+
+
+# Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
+run '~/.tmux/plugins/tpm/tpm'
+
+
